tests/ui/pattern/usefulness/conflicting_bindings.edition2024.stderr
error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:9:9
   |
LL |     let ref mut y @ ref mut z = x;
   |         ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |         |
   |         value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:11:14
   |
LL |     let Some(ref mut y @ ref mut z) = x else { return };
   |              ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |              |
   |              value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:13:17
   |
LL |     if let Some(ref mut y @ ref mut z) = x {}
   |                 ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                 |
   |                 value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:15:17
   |
LL |     if let Some(ref mut y @ ref mut z) = x && true {}
   |                 ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                 |
   |                 value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:17:43
   |
LL |     if let Some(_) = Some(()) && let Some(ref mut y @ ref mut z) = x && true {}
   |                                           ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                                           |
   |                                           value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:19:20
   |
LL |     while let Some(ref mut y @ ref mut z) = x {}
   |                    ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                    |
   |                    value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:21:20
   |
LL |     while let Some(ref mut y @ ref mut z) = x && true {}
   |                    ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                    |
   |                    value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:24:9
   |
LL |         ref mut y @ ref mut z => {}
   |         ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |         |
   |         value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:27:24
   |
LL |         () if let Some(ref mut y @ ref mut z) = x => {}
   |                        ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                        |
   |                        value is mutably borrowed by `y` here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/conflicting_bindings.rs:31:51
   |
LL |         () if let Some(()) = Some(()) && let Some(ref mut y @ ref mut z) = x && true => {}
   |                                                   ^^^^^^^^^   --------- value is mutably borrowed by `z` here
   |                                                   |
   |                                                   value is mutably borrowed by `y` here

error: aborting due to 10 previous errors

